tests/specs/permission/write_allow_binary/main.out
Running...
error: Uncaught (in promise) PermissionDenied: Requires write access to "binary", run again with the --allow-write flag
Deno.writeTextFileSync(binaryName, "");
     ^
    at writeFileSync (ext:deno_fs/30_fs.js:883:3)
    at Object.writeTextFileSync (ext:deno_fs/30_fs.js:946:10)
    at file:///[WILDLINE]sub.ts:3:6
